--- a/main.css
+++ b/main.css
@@ -1,11 +1,26 @@
 body {
   background: #eee; }
 
+/* greater than symbol indicates direct child */
+.blog > h1 {
+  color: red;
+  border: 1px solid red; }
+
+.blog > h1 {
+  color: red;
+  border: 1px solid red; }
 .blog .entry h1 {
   font-size: 20px;
   color: blue; }
 .blog .entry p {
-  font-size: 12px; }
+  font-size: 12px;
+  margin: 20px;
+  /* '&' takes nested selectors and puts them wherever we want.
+  ** Here we're using it to reverse the order of nesting. */ }
+  html.csscolumns .blog .entry p {
+    column-count: 2;
+    column-gap: 10px;
+    margin: 10px; }
 .blog .entry a {
   color: red; }
 
