--- a/main.scss
+++ b/main.scss
@@ -31,6 +31,10 @@ body {
     }
     a {
       color: red;
+      /* Take this selector and add :hover to it */
+      &:hover {
+        color: blue;
+      }
     }
   }
 }
